<resources>
    <string name="app_name">Hair Salon</string>
    <string name="linhasLogo">Linhas do logo</string>>
    <string name="iconeprincipaldologo">Icone principal do logo</string>>
    <string name="hairSalor">Haír Salon</string>>
    <string name="bemvindo">Bem-vindo</string>>
    <string name="agendeAquiSuaVisita">Agende aqui sua visita!</string>>
    <string name="email">E-mail</string>>
    <string name="senha">Senha</string>>
    <string name="fazerCadastro">Fazer Cadastro</string>>
    <string name="login">Login</string>>
    <string name="backGroundLogin">Back Ground Login</string>
    <string name="massage_conexao_criada_com_sucesso">Conexao criada com sucesso!</string>>
    <string name="DigiteSeuEmailAqui">Digite seu e-mail aqui!</string>>
    <string name="DigiteSuaSenhaAqui">Digite sua senha aqui!</string>
    <string name="fa_a_seu_registo">Faça seu registo!</string>
    <string name="digite_sua_senha_novamente">Digite sua senha novamente</string>
    <string name="registrar">Registrar</string>>
    <string name="nome">Nome</string>>
    <string name="digite_seu_nome_aqui">Digite seu nome aqui!</string>>
    <string name="action_reservas">Minhas Reservas</string>>
    <string name="action_perfil">Perfil</string>>
    <string name="action_sair">Sair</string>
    <string name="title_activity_services">ServicesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>>

    <!-- SERVIÇOS -->
    <string name="Servicos">Serviços</string>>
    <string name="Corte">Corte</string>>
    <string name="Manicure">Manicure</string>>
    <string name="Sobrancelha">Sobrancelha</string>>
    <string name="Pedicure">Pedicure</string>>
    <string name="Maquiagem">Maquiagem</string>>
    <string name="Coloracao">Coloração</string>>
    <string name="Capilar">Capilar</string>>

    <!-- CALENDARIO -->
    <string name="CorteCalendar">Corte</string>>
    <string name="preco">Preço:</string>>
    <string name="MediaDeTempo">Média de tempo:</string>>
    <string name="DiasDisponiveis">Dias Disponíveis:</string>>
    <string name="Voltar">Voltar</string>>

    <!-- HORARIOS DISPONIVEIS -->
    <string name="horariosDisponiveis">Horários Disponíveis</string>>
    <string name="avancar">Avançar</string>>

    <!-- HORARIO MARCADO -->
    <string name="parabens">Parabéns!</string>>
    <string name="horarioReservado">Seu horário foi reservado</string>>
    <string name="ComSucesso">com sucesso!</string>>
    <string name="Menu">Menu</string>>

    <!-- Perfil e Reservas -->

    <string name="MinhasReservas">Minhas Reservas:</string>>
    <string name="Dia">Dia:</string>>
    <string name="Horario">Horário:</string>>
    <string name="Cancelar">Cancelar</string>>

</resources>