<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Po.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/background"
            android:layout_width="900dp"
            android:layout_height="900dp"
            android:contentDescription="@string/backGroundLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.56"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/imagemdefundo" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="117dp"
            android:layout_height="136dp"
            android:contentDescription="@string/iconeprincipaldologo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/logo_branco2" />

        <ImageView
            android:id="@+id/linha1_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/linhasLogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/logo"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/logo"
            app:layout_constraintVertical_bias="0.089"
            app:srcCompat="@drawable/linha_branca" />

        <ImageView
            android:id="@+id/linha2_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:contentDescription="@string/linhasLogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/logo"
            app:layout_constraintTop_toTopOf="@+id/logo"
            app:layout_constraintVertical_bias="0.089"
            app:srcCompat="@drawable/linha_branca" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hairSalor"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:fontFamily="sans-serif-condensed-medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <TextView
            android:id="@+id/Bem_Vindo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/bemvindo"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/faca_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/agendeAquiSuaVisita"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Bem_Vindo" />

        <TextView
            android:id="@+id/email1_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="80dp"
            android:text="@string/email"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/faca_registro" />

        <EditText
            android:id="@+id/digitar_email1_login"
            android:layout_width="308dp"
            android:layout_height="43dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="69dp"
            android:ems="10"
            android:hint="@string/DigiteSeuEmailAqui"
            android:inputType="textPersonName"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/email1_login"
            app:layout_constraintTop_toBottomOf="@+id/faca_registro" />

        <ImageView
            android:id="@+id/linha_email1"
            android:layout_width="388dp"
            android:layout_height="7dp"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/linhasLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/faca_registro"
            app:srcCompat="@drawable/linha_email_branca" />

        <TextView
            android:id="@+id/senha1_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="128dp"
            android:text="@string/senha"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/faca_registro" />

        <EditText
            android:id="@+id/digitar_senha_login"
            android:layout_width="308dp"
            android:layout_height="43dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="116dp"
            android:ems="10"
            android:hint="@string/DigiteSuaSenhaAqui"
            android:inputType="textPassword"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/senha1_login"
            app:layout_constraintTop_toBottomOf="@+id/faca_registro" />

        <ImageView
            android:id="@+id/linha_senha2"
            android:layout_width="388dp"
            android:layout_height="7dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/linhasLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linha_email1"
            app:srcCompat="@drawable/linha_email_branca" />

        <Button
            android:id="@+id/botao_registrar"

            android:layout_width="132dp"
            android:layout_height="38dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/buttonshape"
            android:onClick="clicarLogin"
            android:text="@string/login"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linha_senha2"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/fazerCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:onClick="clicarFazerCadastro"
            android:text="@string/fazerCadastro"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linha_Cadastro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/linha_Cadastro"
            android:layout_width="388dp"
            android:layout_height="7dp"
            android:layout_marginTop="200dp"
            android:contentDescription="@string/linhasLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linha_email1"
            app:srcCompat="@drawable/linha_email_branca" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>