<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/background"
            android:layout_width="900dp"
            android:layout_height="900dp"
            android:contentDescription="@string/backGroundLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.556"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/imagemdefundo" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="117dp"
            android:layout_height="136dp"
            android:contentDescription="@string/iconeprincipaldologo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/logo_branco2" />

        <ImageView
            android:id="@+id/linha1_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/linhasLogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/logo"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/logo"
            app:layout_constraintVertical_bias="0.089"
            app:srcCompat="@drawable/linha_branca" />

        <ImageView
            android:id="@+id/linha2_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:contentDescription="@string/linhasLogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/logo"
            app:layout_constraintTop_toTopOf="@+id/logo"
            app:layout_constraintVertical_bias="0.089"
            app:srcCompat="@drawable/linha_branca" />

        <TextView
            android:id="@+id/faca_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/fa_a_seu_registo"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <TextView
            android:id="@+id/nome1_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="48dp"
            android:text="@string/nome"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/faca_registro" />

        <EditText
            android:id="@+id/digitar_nome1_cadastro"
            android:layout_width="308dp"
            android:layout_height="43dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="36dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/digite_seu_nome_aqui"
            android:inputType="textPersonName"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nome1_cadastro"
            app:layout_constraintTop_toBottomOf="@+id/faca_registro" />

        <ImageView
            android:id="@+id/linha_nome1"
            android:layout_width="388dp"
            android:layout_height="7dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/linhasLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.695"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/faca_registro"
            app:srcCompat="@drawable/linha_email_branca" />

        <TextView
            android:id="@+id/email1_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="88dp"
            android:text="@string/email"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/faca_registro" />

        <EditText
            android:id="@+id/digitar_email1_cadastro"
            android:layout_width="308dp"
            android:layout_height="43dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/DigiteSeuEmailAqui"
            android:inputType="textEmailAddress"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/email1_cadastro"
            app:layout_constraintTop_toBottomOf="@+id/faca_registro" />

        <ImageView
            android:id="@+id/linha_email1"
            android:layout_width="388dp"
            android:layout_height="7dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="108dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/linhasLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/faca_registro"
            app:srcCompat="@drawable/linha_email_branca" />

        <TextView
            android:id="@+id/senha1_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="128dp"
            android:text="@string/senha"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/faca_registro" />

        <EditText
            android:id="@+id/digitar_senha1_cadastro"
            android:layout_width="308dp"
            android:layout_height="43dp"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="116dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/DigiteSuaSenhaAqui"
            android:inputType="textPassword"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/email1_cadastro"
            app:layout_constraintTop_toBottomOf="@+id/faca_registro" />

        <ImageView
            android:id="@id/linha_senha2"
            android:layout_width="388dp"
            android:layout_height="7dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="148dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/linhasLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/faca_registro"
            app:srcCompat="@drawable/linha_email_branca" />

        <TextView
            android:id="@+id/senha2_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="168dp"
            android:text="@string/senha"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/faca_registro" />

        <EditText
            android:id="@+id/digitar_senha2_cadastro"
            android:layout_width="308dp"
            android:layout_height="43dp"
            android:layout_marginTop="156dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/digite_sua_senha_novamente"
            android:inputType="textPassword"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/senha1_cadastro"
            app:layout_constraintTop_toBottomOf="@+id/faca_registro" />

        <ImageView
            android:id="@+id/linha_senha2"
            android:layout_width="388dp"
            android:layout_height="7dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="188dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/linhasLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/faca_registro"
            app:srcCompat="@drawable/linha_email_branca" />

        <Button
            android:id="@+id/botao_registrar"

            android:layout_width="132dp"
            android:layout_height="38dp"
            android:layout_marginTop="228dp"
            android:background="@drawable/buttonshape"
            android:onClick="validarTodosCamposEEscrever"
            android:text="@string/registrar"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/faca_registro"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>