<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="1000dp"
    android:background="@drawable/cabelo5"
    tools:context=".Po.HorarioMarcadoActivity">
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <TextView
            android:id="@+id/textViewHorario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="600dp"
            android:text="@string/parabens"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:fontFamily="More Fonts..."
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"></TextView>

        <!--android:onClick=""-->

        <TextView
            android:id="@+id/textView40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/horarioReservado"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:fontFamily="More Fonts..."
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewHorario"></TextView>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/ComSucesso"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:fontFamily="More Fonts..."
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView40"></TextView>

        <Button
            android:id="@+id/botao_menu"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/buttonshape"
            android:text="@string/Menu"
            android:textColor="#000000"
            android:textSize="18sp"
            android:onClick="voltarParaOMenuPrincipal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>